; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_net_help.c_addr_is_ip4mapped.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/unbound/util/extr_net_help.c_addr_is_ip4mapped.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr_storage = type { i32 }
%struct.sockaddr_in6 = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @addr_is_ip4mapped(%struct.sockaddr_storage* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sockaddr_storage*, align 8
  %5 = alloca i32, align 4
  %6 = alloca [16 x i32], align 16
  %7 = alloca i32*, align 8
  store %struct.sockaddr_storage* %0, %struct.sockaddr_storage** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = bitcast [16 x i32]* %6 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %8, i8 0, i64 64, i1 false)
  %9 = bitcast i8* %8 to [16 x i32]*
  %10 = getelementptr inbounds [16 x i32], [16 x i32]* %9, i32 0, i32 10
  store i32 255, i32* %10, align 8
  %11 = getelementptr inbounds [16 x i32], [16 x i32]* %9, i32 0, i32 11
  store i32 255, i32* %11, align 4
  %12 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %4, align 8
  %13 = load i32, i32* %5, align 4
  %14 = call i32 @addr_is_ip6(%struct.sockaddr_storage* %12, i32 %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %17, label %16

16:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %26

17:                                               ; preds = %2
  %18 = load %struct.sockaddr_storage*, %struct.sockaddr_storage** %4, align 8
  %19 = bitcast %struct.sockaddr_storage* %18 to %struct.sockaddr_in6*
  %20 = getelementptr inbounds %struct.sockaddr_in6, %struct.sockaddr_in6* %19, i32 0, i32 0
  store i32* %20, i32** %7, align 8
  %21 = load i32*, i32** %7, align 8
  %22 = getelementptr inbounds [16 x i32], [16 x i32]* %6, i64 0, i64 0
  %23 = call i64 @memcmp(i32* %21, i32* %22, i32 12)
  %24 = icmp eq i64 %23, 0
  %25 = zext i1 %24 to i32
  store i32 %25, i32* %3, align 4
  br label %26

26:                                               ; preds = %17, %16
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @addr_is_ip6(%struct.sockaddr_storage*, i32) #2

declare dso_local i64 @memcmp(i32*, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
